# faultray

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LAUNCH.md  Makefile  README.md  action.yml  docker-compose.yml  executive-report.html  fly.toml  mkdocs.yml  pyproject.toml  render.yaml
.github/: SPONSORS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cla.yml  faultray-pr-check.yml  gitleaks.yml  infrasim-pr-check.yml  marketplace-push.yml  pages.yml  pr-review.yml  release.yml  resilience-gate.yml  terraform-guard.yml  zap-scan.yml
demo/: demo-script.sh  faultray-demo.cast  record-demo.sh
docs/: InfraSim_System_Document.md  backtest-results.json  backtest-results.md  competitive-landscape-research.md  convert_doc.py  index.html  index.md  phase0-validation-report.md
docs/api/: graphql.md  python-sdk.md  rest.md
docs/beta/: beta-evaluation-guide.md
docs/cfp/: sre-conference-proposal.md
docs/cli/: commands.md
docs/concepts/: five-layer-model.md  how-it-works.md  risk-scoring.md
docs/enterprise/: aws-marketplace-listing.md  compliance.md  insurance.md  rbac.md
docs/getting-started/: first-simulation.md  installation.md  quickstart.md
docs/integrations/: aws.md  azure.md  cicd.md  gcp.md  kubernetes.md  slack.md  terraform.md
docs/legal/: privacy-policy.md  terms-of-service.md
docs/marketing/: reddit-post-sre.md  reddit-post-terraform.md
docs/proposal/: executive-report.html  sample-report.html  service-proposal.md
docs/sales/: email-template.md  one-pager.md  pitch-deck.md
examples/: ai-agent-workflow.yaml  demo-infra.yaml  ecommerce-platform.yaml  fintech-banking.yaml  healthcare-ehr.yaml  saas-multi-tenant.yaml  sdk_example.py  shadow-it-sample.yaml
examples/ci/: .circleci-config.yml  .gitlab-ci.yml  Jenkinsfile
faultray/: collector.py
landing/: index.html
marketing/: arxiv-endorsement-emails.md  devto-article.md  hackernews-post.md  qiita-article.md  reddit-posts.md  terraform-community-posts.md
paper/: PARALLEL_FIX_INSTRUCTIONS.md  WEAKNESS_ANALYSIS.md  faultray-paper.tex  icse2027-nier.tex  issre2026-fast-abstract.tex
postmortems/: INC-02644A07.md  INC-054334C7.md  INC-0DA8F112.md  INC-102264FE.md  INC-188BB2F0.md  INC-2310AEE5.md  INC-2B460FC0.md  INC-49AF45ED.md  INC-4A56C94A.md  INC-4C73BCE8.md  INC-576D23A8.md  INC-75DD8A54.md  INC-7697ADB6.md  INC-7F81A622.md  INC-96CFDB2D.md  INC-9E8D7917.md  INC-A3269BD0.md  INC-A32AED85.md  INC-A7F5AA97.md  INC-A98D7F20.md  INC-AF9B5157.md  INC-B0B6759A.md  INC-B9FEEB77.md  INC-C5CA106A.md  INC-C749D57E.md  INC-E8A4C7C2.md  INC-EA09AE09.md  INC-EC03D40C.md  _summary.md
scripts/: run_backtest_report.py  run_e2e.sh  run_yaml_backtest.py  setup_stripe.py
site/: CNAME  index.html  robots.txt  script.js  style.css
src/faultray/: __init__.py  cache.py  coupon.py  daemon.py  differ.py  errors.py  features.py  health.py  history.py  i18n.py  licensing.py  log_config.py  marketplace.py  mcp_server.py  nl_query.py  scoring.py  sdk.py  telemetry.py  theme.py
src/faultray/ai/: analyzer.py  architecture_advisor.py  nl_to_infra.py
src/faultray/api/: api_versioning.py  auth.py  badge_generator.py  billing.py  chat_engine.py  database.py  graphql_api.py  insurance_api.py  leaderboard.py  oauth.py  openapi_config.py  server.py  teams.py  widget.py
src/faultray/apm/: eol_checker.py  metrics_db.py
src/faultray/autopilot/: __init__.py  requirements_parser.py  topology_designer.py
src/faultray/ci/: __init__.py  github_action.py  sarif_exporter.py
src/faultray/cli/: __init__.py  ab_test_cmd.py  admin.py  advisor_cmd.py  analyze.py  anomaly_cmd.py  antipattern_cmd.py  ask_cmd.py  auto_fix.py  (+74 more)
src/infrasim/: __init__.py  cache.py  cli.py  config.py  daemon.py  history.py  licensing.py  log_config.py  marketplace.py  scoring.py
tests/: test_ab_chaos.py  test_accessibility_audit.py  test_advisor_engine.py  test_agent_cmd.py  test_ai_analyzer.py  test_ai_infra_resilience.py  test_alert_correlator.py  test_alert_fatigue.py  test_anomaly_detector.py  test_antipattern.py  test_antipattern_detector.py  test_api_contracts.py  test_api_docs.py  test_api_extended.py  test_api_gateway_resilience.py  test_api_integration.py  test_api_server.py  test_api_versioning_impact.py  test_apm_agent.py  test_apm_topology.py  test_architecture_advisor.py  test_attack_surface.py  test_auth.py  test_auto_pipeline.py  test_autoscaling_engine.py  test_autoscaling_policy_evaluator.py  test_availability_model.py  test_aws_resilience_hub_bridge.py  test_aws_scanner.py  test_azure_scanner.py  test_backtest_engine.py  test_backup_recovery_planner.py  test_badge_generator.py  test_bayesian_model.py  test_benchmarking.py  test_blast_predictor.py  test_blast_radius_calculator.py  test_blast_radius_mapper.py  test_blast_radius_predictor.py  test_boundary_values.py  (+323 more)
tests/api/: test_middleware_security.py
tests/incidents/: atlassian-2022-outage.yaml  aws-2018-s3-control.yaml  aws-2019-power-event.yaml  aws-2020-kinesis-expansion.yaml  aws-2021-route53.yaml  aws-2022-us-east-1.yaml  aws-2023-lambda-ecs.yaml  azure-2020-dns-cascade.yaml  azure-2022-west-europe.yaml  azure-2023-cosmos-db.yaml  azure-2023-wan-routing.yaml  cloudflare-2019-regex.yaml  cloudflare-2020-bgp-leak.yaml  cloudflare-2022-outage.yaml  cloudflare-2023-control-plane.yaml  cloudflare-2023-thanksgiving.yaml  datadog-2023-ingestion.yaml  digitalocean-2022-storage.yaml  discord-2023-api.yaml  fastly-2021-global.yaml  gcp-2019-networking-multi.yaml  gcp-2020-auth-outage.yaml  gcp-2022-gcs-metadata.yaml  gcp-2022-networking-lesson.yaml  gcp-2023-networking-europe.yaml  github-2021-db-connectivity.yaml  github-2022-ssl-cert.yaml  github-2023-db-migration.yaml  github-2024-actions-copilot.yaml  gitlab-2017-db-deletion.yaml  heroku-2022-oauth.yaml  meta-2021-bgp-detailed.yaml  okta-2022-breach.yaml  pagerduty-2023-processing.yaml  slack-2022-db.yaml  zoom-2020-overload.yaml
ui/: streamlit_app.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
(+454 files in other folders)
