[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faultray"
version = "11.2.0"
description = "FaultRay — Zero-risk infrastructure and AI agent chaos engineering. Simulate agent resilience failures and prove your availability ceiling mathematically."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Yutaro Maeda", email = "mattyopon@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
    "Framework :: FastAPI",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
keywords = ["chaos-engineering", "sre", "devops", "infrastructure", "simulation", "reliability", "slo", "fault-injection", "resilience-testing", "availability", "disaster-recovery", "incident-response", "terraform", "prometheus", "dora-compliance", "ai-agent", "agentic-ai"]
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "pydantic>=2.0",
    "networkx>=3.0",
    "psutil>=6.0",
    "fastapi>=0.115",
    "itsdangerous>=2.1",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
saas = [
    "stripe>=8.0",
    "authlib>=1.3",
    "python-jose[cryptography]>=3.3",
]
aws = [
    "boto3>=1.28",
]
gcp = [
    "google-cloud-compute>=1.0",
    "google-cloud-sql-admin>=1.0",
    "google-cloud-redis>=2.0",
    "google-cloud-storage>=2.0",
]
azure = [
    "azure-identity>=1.15",
    "azure-mgmt-compute>=30.0",
    "azure-mgmt-sql>=3.0",
    "azure-mgmt-redis>=14.0",
]
k8s = [
    "kubernetes>=28.0",
]
sakura = [
    "requests>=2.28",
]
alibaba = [
    "alibabacloud-ecs20140526>=3.0",
    "alibabacloud-rds20140815>=3.0",
    "alibabacloud-slb20140515>=3.0",
    "requests>=2.28",
]
oci = [
    "oci>=2.0",
]
onprem = [
    "pynetbox>=7.0",
]
all-clouds = [
    "boto3>=1.28",
    "google-cloud-compute>=1.0",
    "azure-identity>=1.15",
    "kubernetes>=28.0",
    "requests>=2.28",
    "alibabacloud-ecs20140526>=3.0",
    "alibabacloud-rds20140815>=3.0",
    "alibabacloud-slb20140515>=3.0",
    "oci>=2.0",
    "pynetbox>=7.0",
]
pdf = [
    "fpdf2>=2.8",
]
mcp = [
    "mcp>=1.0,<1.28",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "ruff>=0.8",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "pytest-cov>=5.0",
    "types-PyYAML>=6.0",
    "types-networkx>=3.0",
    "stripe>=8.0",
    "authlib>=1.3",
    "python-jose[cryptography]>=3.3",
]

[project.urls]
Homepage = "https://faultray.com"
Documentation = "https://github.com/mattyopon/faultray/tree/main/docs"
Repository = "https://github.com/mattyopon/faultray"
Issues = "https://github.com/mattyopon/faultray/issues"
Changelog = "https://github.com/mattyopon/faultray/blob/main/CHANGELOG.md"

[project.scripts]
faultray = "faultray.cli:app"
faultray-mcp = "faultray.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/faultray"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"src/faultray/api/server.py" = ["E402"]
"tests/*.py" = ["E402", "E741", "F401", "F811", "F821"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["e2e: end-to-end tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.mutmut]
paths_to_mutate = "src/faultray/model/:src/faultray/simulator/engine.py:src/faultray/simulator/cascade.py"
tests_dir = "tests/"
runner = "python -m pytest tests/test_engine.py tests/test_scenarios.py tests/test_cascade.py -x -q"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
source = ["src/faultray"]
